--- a/Todo.Web/Components/Pages/ProjectPage.razor.css
+++ b/Todo.Web/Components/Pages/ProjectPage.razor.css
@@ -143,15 +143,14 @@ span {
 
 /* Updated Label Editor Styling */
 .label-editor {
-    position: fixed; /* Change to fixed positioning */
-    left: 46%; /* Center horizontally */
+    position: absolute; 
+    left: 46%; 
     top: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     border: 1px solid #000000;
     border-radius: 4px;
     padding: 16px;
-    z-index: 1100; /* Higher than modifiymenu */
+    z-index: 1100;
     min-width: 250px;
     max-width: 300px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
