--- a/Todo.Web/Components/Layout/NavMenu.razor
+++ b/Todo.Web/Components/Layout/NavMenu.razor
@@ -52,6 +52,11 @@
                         <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
                     </NavLink>
                 </div>
+                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="/settings">
+                        <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Settings
+                    </NavLink>
+                </div>
             </NotAuthorized>
         </AuthorizeView>
     </nav>
