--- a/Todo.Web/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -1,12 +1,7 @@
 ﻿@page "/Account/Manage/GenerateRecoveryCodes"
 
-@using Microsoft.AspNetCore.Identity
-@using Todo.Core.Entities
-
-
-@inject UserManager<ApplicationUser> UserManager
-@inject IdentityUserAccessor UserAccessor
-@inject IdentityRedirectManager RedirectManager
+@using Todo.Web.Auth
+@inject IUserService UserService
 @inject ILogger<GenerateRecoveryCodes> Logger
 
 <PageTitle>Generate two-factor authentication (2FA) recovery codes</PageTitle>
@@ -41,18 +36,13 @@ else
 
 @code {
     private string? message;
-    private ApplicationUser user = default!;
     private IEnumerable<string>? recoveryCodes;
-
-    [CascadingParameter]
-    private HttpContext HttpContext { get; set; } = default!;
 
     protected override async Task OnInitializedAsync()
     {
-        user = await UserAccessor.GetRequiredUserAsync(HttpContext);
-
-        var isTwoFactorEnabled = await UserManager.GetTwoFactorEnabledAsync(user);
-        if (!isTwoFactorEnabled)
+        var twoFactorInfo = await UserService.GetTwoFactorInfoAsync();
+        
+        if (twoFactorInfo == null || !twoFactorInfo.Is2faEnabled)
         {
             throw new InvalidOperationException("Cannot generate recovery codes for user because they do not have 2FA enabled.");
         }
@@ -60,11 +50,17 @@ else
 
     private async Task OnSubmitAsync()
     {
-        var userId = await UserManager.GetUserIdAsync(user);
-        recoveryCodes = await UserManager.GenerateNewTwoFactorRecoveryCodesAsync(user, 10);
-        message = "You have generated new recovery codes.";
-
-        Logger.LogInformation("User with ID '{UserId}' has generated new 2FA recovery codes.", userId);
+        try 
+        {
+            recoveryCodes = await UserService.GenerateRecoveryCodesAsync();
+            message = "You have generated new recovery codes.";
+            
+            Logger.LogInformation("New 2FA recovery codes generated.");
+        }
+        catch (Exception ex)
+        {
+            Logger.LogError(ex, "Error generating recovery codes");
+            message = "An error occurred while generating recovery codes.";
+        }
     }
-
 }
