Implemented a DTO for each dto endpoint

--- a/Todo.Web/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/ChangePassword.razor
@@ -39,7 +39,7 @@
 
 @code {
     private string? message;
-    private UserInfoRequest? user = default!;
+    private UserInfoResponse? user = default!;
     private bool hasPassword;
 
     [CascadingParameter]
