--- a/Todo.Web/Components/Account/Pages/Manage/Email.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/Email.razor
@@ -5,6 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
+@using Todo.Core.Dtos.AuthDto
 @using Todo.Core.Entities
 @using Todo.Web.Auth
 @using Todo.Web.Auth.Models
@@ -55,7 +56,7 @@
 
 @code {
     private string? message;
-    private UserInfoRequest? user = default!;
+    private UserInfoResponse? user = default!;
     private string? email;
     private bool isEmailConfirmed;
 
@@ -83,9 +84,8 @@
             return;
         }
 
-        var userRequest = new UserInfoRequest()
+        var userRequest = new UpdateEmailDto()
         {
-            Username = user.Username,
             Email = Input.NewEmail
         };
         Console.WriteLine("NEW EMAIL: "  +Input.NewEmail);
@@ -104,47 +104,6 @@
 
         message = "Your email has been changed.";
     }
-    
-    /* OLD IDENTiTY CODE
-     private async Task OnValidSubmitAsync()
-    {
-        if (Input.NewEmail is null || Input.NewEmail == email)
-        {
-            message = "Your email is unchanged.";
-            return;
-        }
-
-        
-        var code = await UserManager.GenerateChangeEmailTokenAsync(user, Input.NewEmail);
-        code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
-        var callbackUrl = NavigationManager.GetUriWithQueryParameters(
-            NavigationManager.ToAbsoluteUri("Account/ConfirmEmailChange").AbsoluteUri,
-            new Dictionary<string, object?> { ["userId"] = userId, ["email"] = Input.NewEmail, ["code"] = code });
-
-        await EmailSender.SendConfirmationLinkAsync(user, Input.NewEmail, HtmlEncoder.Default.Encode(callbackUrl));
-
-        message = "Confirmation link to change email sent. Please check your email.";
-    }
-
-    private async Task OnSendEmailVerificationAsync()
-    {
-        if (email is null)
-        {
-            return;
-        }
-
-        var userId = await UserManager.GetUserIdAsync(user);
-        var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
-        code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
-        var callbackUrl = NavigationManager.GetUriWithQueryParameters(
-            NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
-            new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code });
-
-        await EmailSender.SendConfirmationLinkAsync(user, email, HtmlEncoder.Default.Encode(callbackUrl));
-
-        message = "Verification email sent. Please check your email.";
-    }*/
-    
 
     private sealed class InputModel
     {
