--- a/Todo.Web/Components/Account/Pages/Manage/Index.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/Index.razor
@@ -37,7 +37,7 @@
 </div>
 
 @code {
-    private UserInfoRequest? user = default!;
+    private UserInfoResponse? user = default!;
     private string? username;
     private string? phoneNumber;
     private string StatusMessage { get; set; } = "";
