--- a/Todo.Web/Components/Account/Pages/Manage/SetPassword.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/SetPassword.razor
@@ -38,7 +38,7 @@
 
 @code {
     private string? message;
-    private UserInfoRequest? user = default!;
+    private UserInfoResponse? user = default!;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
