remeber me color change

--- a/Todo.Web/Components/Account/Pages/Login.razor
+++ b/Todo.Web/Components/Account/Pages/Login.razor
@@ -30,7 +30,7 @@
                 <ValidationMessage For="() => Input.Password" class="text-danger"/>
             </div>
             <div class="checkbox mb-3">
-                <label class="form-label">
+                <label class="form-label" id="rememberMe">
                     <InputCheckbox @bind-Value="Input.RememberMe" class="darker-border-checkbox form-check-input"/>
                     Remember me
                 </label>
