using the correct namespaces

--- a/Todo.Web/Components/Account/Pages/Manage/Email.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/Email.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using Todo.Core.Dtos.AuthDto
+@using Todo.Core.Dtos.UserInfoDtos
 @using Todo.Core.Entities
 @using Todo.Web.Auth
 @using Todo.Web.Auth.Models
