validation for length

--- a/Todo.Web/Components/Account/Pages/Manage/Index.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/Index.razor
@@ -88,6 +88,8 @@
     private sealed class InputModel
     {
         [Phone]
+        [StringLength(12)]
+        [MinLength(6)]
         [Display(Name = "Phone number")]
         public string? PhoneNumber { get; set; }
     }
