Improve/remove identity (#12)
* Added AddDefaultTokenProviders

* Changed userinfo into a DTO and request

* Removed indentity from index

* Using UserService instead of Identity

* Implemented UpdateEmailAsync & IsEmailConformedAsync

* Implemented SetPasswordAsync & ChangePasswordAsync

* Removed Indentity from SetPassword.razor

* Implemented 2factor authentication

* Using UserService instead of Identity

* Added *QR-code* and Removed Identity an

* Remove Identity from PersonalData and deletePersonalData

* Implemented a DTO for each dto endpoint

* using the correct namespaces

* validation for length

* AddRoles give an error

* Renamed a dto file

* Removed unused @using

* Validation for userinfodtos

---------

Co-authored-by: Zacharias Egholm <113907743+Zigalow@users.noreply.github.com>

--- a/Todo.Web/Components/Account/Pages/Manage/SetPassword.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/SetPassword.razor
@@ -1,23 +1,21 @@
 ﻿@page "/Account/Manage/SetPassword"
 
 @using System.ComponentModel.DataAnnotations
-@using Microsoft.AspNetCore.Identity
-@using Todo.Core.Entities
+@using Todo.Web.Auth
+@using Todo.Web.Auth.Models
 
 
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
-@inject IdentityUserAccessor UserAccessor
-@inject IdentityRedirectManager RedirectManager
+@inject IUserService UserService
+@inject NavigationManager NavigationManager
 
 <PageTitle>Set password</PageTitle>
 
 <h3>Set your password</h3>
 <StatusMessage Message="@message"/>
-<p class="text-info">
+@*<p class="text-info">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
-</p>
+</p>*@
 <div class="row">
     <div class="col-md-6">
         <EditForm Model="Input" FormName="set-password" OnValidSubmit="OnValidSubmitAsync" method="post">
@@ -40,7 +38,7 @@
 
 @code {
     private string? message;
-    private ApplicationUser user = default!;
+    private UserInfoResponse? user = default!;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
@@ -50,26 +48,28 @@
 
     protected override async Task OnInitializedAsync()
     {
-        user = await UserAccessor.GetRequiredUserAsync(HttpContext);
+        user = await UserService.GetUserInfoAsync();
 
-        var hasPassword = await UserManager.HasPasswordAsync(user);
+        var hasPassword = await UserService.HasPasswordAsync();
         if (hasPassword)
         {
-            RedirectManager.RedirectTo("Account/Manage/ChangePassword");
+            NavigationManager.NavigateTo("Account/Manage/ChangePassword");
         }
     }
 
     private async Task OnValidSubmitAsync()
     {
-        var addPasswordResult = await UserManager.AddPasswordAsync(user, Input.NewPassword!);
-        if (!addPasswordResult.Succeeded)
+        var addPasswordResult = await UserService.AddPasswordAsync(Input.NewPassword!);
+        
+        if (!addPasswordResult)
         {
-            message = $"Error: {string.Join(",", addPasswordResult.Errors.Select(error => error.Description))}";
+            message = "Failed to set the password.";
             return;
         }
-
-        await SignInManager.RefreshSignInAsync(user);
-        RedirectManager.RedirectToCurrentPageWithStatus("Your password has been set.", HttpContext);
+        
+        message = "Your password has been set.";
+        NavigationManager.NavigateTo("Account/Manage/ChangePassword");
+        
     }
 
     private sealed class InputModel
