--- a/Todo.Web/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/ChangePassword.razor
@@ -1,15 +1,12 @@
 ﻿@page "/Account/Manage/ChangePassword"
 
 @using System.ComponentModel.DataAnnotations
-@using Microsoft.AspNetCore.Identity
-@using Todo.Core.Entities
+@using Todo.Web.Auth
+@using Todo.Web.Auth.Models
 
-
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
-@inject IdentityUserAccessor UserAccessor
-@inject IdentityRedirectManager RedirectManager
+@inject IUserService UserService
 @inject ILogger<ChangePassword> Logger
+@inject NavigationManager NavigationManager
 
 <PageTitle>Change password</PageTitle>
 
@@ -42,7 +39,7 @@
 
 @code {
     private string? message;
-    private ApplicationUser user = default!;
+    private UserInfoResponse? user = default!;
     private bool hasPassword;
 
     [CascadingParameter]
@@ -53,27 +50,57 @@
 
     protected override async Task OnInitializedAsync()
     {
-        user = await UserAccessor.GetRequiredUserAsync(HttpContext);
-        hasPassword = await UserManager.HasPasswordAsync(user);
+        user = await UserService.GetUserInfoAsync();
+        hasPassword = await UserService.HasPasswordAsync();
         if (!hasPassword)
         {
-            RedirectManager.RedirectTo("Account/Manage/SetPassword");
+            NavigationManager.NavigateTo("Account/Manage/SetPassword");
         }
     }
 
     private async Task OnValidSubmitAsync()
     {
-        var changePasswordResult = await UserManager.ChangePasswordAsync(user, Input.OldPassword, Input.NewPassword);
-        if (!changePasswordResult.Succeeded)
+        if (Input.OldPassword == Input.NewPassword)
         {
-            message = $"Error: {string.Join(",", changePasswordResult.Errors.Select(error => error.Description))}";
+            message = "Failed to change password";
             return;
         }
 
-        await SignInManager.RefreshSignInAsync(user);
-        Logger.LogInformation("User changed their password successfully.");
+        if (Input.NewPassword != Input.ConfirmPassword)
+        {
+            message = "Failed to change password";
+            return;
+        }
 
-        RedirectManager.RedirectToCurrentPageWithStatus("Your password has been changed", HttpContext);
+        if (string.IsNullOrEmpty(Input.NewPassword) || string.IsNullOrEmpty(Input.OldPassword) || string.IsNullOrEmpty(Input.ConfirmPassword))
+        {
+            message = "Failed to change password";
+            return;
+        }
+
+        if (string.IsNullOrWhiteSpace(Input.NewPassword) || string.IsNullOrWhiteSpace(Input.OldPassword) || string.IsNullOrWhiteSpace(Input.ConfirmPassword))
+        {
+            message = "Failed to change password";
+            return;
+        }
+        
+        var changePasswordResult = await UserService.ChangePasswordAsync(Input.OldPassword, Input.NewPassword);
+        if (!changePasswordResult)
+        {
+            
+            message = "Failed to change password";
+            return;
+        }
+        Console.WriteLine("Password changed successfully");
+        
+        Logger.LogInformation("User changed their password successfully.");
+        message= "User changed their password successfully";
+        //await Task.Delay(3000);
+        //message = "";
+        Input.OldPassword = "";
+        Input.NewPassword = "";
+        Input.ConfirmPassword = "";
+        //NavigationManager.NavigateTo("/Account/Manage/ChangePassword");
     }
 
     private sealed class InputModel
